H_FILES = \
AbstractSubstitutionModel.h\
AbstractTreeLikelihood.h\
AbstractDiscreteRatesAcrossSitesTreeLikelihood.h\
AbstractHomogeneousTreeLikelihood.h\
AbstractAgglomerativeDistanceMethod.h\
AncestralStateReconstruction.h\
MarginalAncestralStateReconstruction.h\
AgglomerativeDistanceMethod.h\
PhylogeneticsApplicationTools.h\
DistanceEstimation.h\
DistanceMatrix.h\
DSO78.h\
PseudoNewtonOptimizer.h\
HKY85.h\
HomogeneousTreeLikelihood.h\
DRHomogeneousTreeLikelihood.h\
DRTreeLikelihoodTools.h\
IODistanceMatrix.h\
iodistance\
IOTree.h\
iotree\
JCnuc.h\
JCprot.h\
JTT92.h\
K80.h\
models\
MutationProcess.h\
Newick.h\
NewtonBrentMetaOptimizer.h\
NucleotideSubstitutionModel.h\
NeighborJoining.h\
NNISearchable.h\
OptimizationTools.h\
PatternTools.h\
PGMA.h\
PhylipDistanceMatrixFormat.h\
ProteinSubstitutionModel.h\
SequenceSimulator.h\
SiteSimulator.h\
DetailedSiteSimulator.h\
HomogeneousSequenceSimulator.h\
SubstitutionModel.h\
T92.h\
TN93.h\
TreeExceptions.h\
Node.h\
NodeTemplate.h\
Tree.h\
TreeTemplate.h\
TreeLikelihood.h\
TreeLikelihoodData.h\
AbstractTreeLikelihoodData.h\
DRASRTreeLikelihoodData.h\
DRASDRTreeLikelihoodData.h\
TreeTools.h\
TreeTemplateTools.h\
DiscreteRatesAcrossSitesTreeLikelihood.h\
RASTools.h\
TreeParsimonyScore.h\
TreeParsimonyData.h\
AbstractTreeParsimonyScore.h\
AbstractTreeParsimonyData.h\
DRTreeParsimonyScore.h\
DRTreeParsimonyData.h\
SequenceSimulationTools.h\
UserProteinSubstitutionModel.h\
TopologySearch.h\
NNITopologySearch.h\
GTR.h\
trees\
SitePatterns.h\
SubstitutionMapping.h\
ProbabilisticSubstitutionMapping.h\
SubstitutionCount.h\
AnalyticalSubstitutionCount.h\
SimpleSubstitutionCount.h\
IndexToCount.h\
SubstitutionMappingTools.h\
BioNJ.h\
SubstitutionModelFactory.h\
RateDistributionFactory.h\
IOTreeFactory.h\
IODistanceMatrixFactory.h\
F84.h\
MarkovModulatedSubstitutionModel.h\
G2001.h\
TS98.h\
NNIHomogeneousTreeLikelihood.h\
ClockTreeLikelihood.h\
ClockMetaOptimizer.h\
BipartitionList.h\
BipartitionTools.h


CPP_FILES = \
AbstractSubstitutionModel.cpp\
AbstractTreeLikelihood.cpp\
AbstractDiscreteRatesAcrossSitesTreeLikelihood.cpp\
AbstractHomogeneousTreeLikelihood.cpp\
AbstractAgglomerativeDistanceMethod.cpp\
PhylogeneticsApplicationTools.cpp\
DistanceEstimation.cpp\
DistanceMatrix.cpp\
DSO78.cpp\
PseudoNewtonOptimizer.cpp\
HKY85.cpp\
HomogeneousTreeLikelihood.cpp\
DRASRTreeLikelihoodData.cpp\
DRHomogeneousTreeLikelihood.cpp\
DRASDRTreeLikelihoodData.cpp\
DRTreeLikelihoodTools.cpp\
JCnuc.cpp\
JCprot.cpp\
JTT92.cpp\
K80.cpp\
MarginalAncestralStateReconstruction.cpp\
MutationProcess.cpp\
NeighborJoining.cpp\
Newick.cpp\
NewtonBrentMetaOptimizer.cpp\
Node.cpp\
OptimizationTools.cpp\
PatternTools.cpp\
PGMA.cpp\
PhylipDistanceMatrixFormat.cpp\
HomogeneousSequenceSimulator.cpp\
SubstitutionModel.cpp\
T92.cpp\
TN93.cpp\
TreeExceptions.cpp\
TreeTools.cpp\
TreeTemplateTools.cpp\
RASTools.cpp\
AbstractTreeParsimonyScore.cpp\
DRTreeParsimonyScore.cpp\
DRTreeParsimonyData.cpp\
SequenceSimulationTools.cpp\
UserProteinSubstitutionModel.cpp\
NNITopologySearch.cpp\
GTR.cpp\
SitePatterns.cpp\
ProbabilisticSubstitutionMapping.cpp\
AnalyticalSubstitutionCount.cpp\
SubstitutionMappingTools.cpp\
BioNJ.cpp\
SubstitutionModelFactory.cpp\
RateDistributionFactory.cpp\
IOTreeFactory.cpp\
IODistanceMatrixFactory.cpp\
F84.cpp\
MarkovModulatedSubstitutionModel.cpp\
NNIHomogeneousTreeLikelihood.cpp\
ClockTreeLikelihood.cpp\
ClockMetaOptimizer.cpp\
BipartitionList.cpp\
BipartitionTools.cpp

CPP_EXTRA = \
__DSO78FrequenciesCode\
__DSO78ExchangeabilityCode\
__JTT92FrequenciesCode\
__JTT92ExchangeabilityCode

lib_LTLIBRARIES = libbpp-phyl.la
libbpp_phyl_la_SOURCES = $(H_FILES) $(CPP_FILES)
EXTRA_libbpp_phyl_la_SOURCES = $(CPP_EXTRA)
# CURRENT:REVISION:AGE => file.so.(C-A).A.R
libbpp_phyl_la_LDFLAGS = -version-info 4:0:0

library_includedir=$(includedir)/Phyl
library_include_HEADERS = $(H_FILES)

